# systemverilog-ide

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: ci.yml
docs/: AI_ASSISTED_SYSTEMVERILOG_WORKFLOW.md  DIAGNOSTICS_XSIM_INTEGRATION_PLAN.md  EDITOR_BRIDGE_CONTRACT.md  EVOLUTIONARY_LOOP_PLAN.md  EXTERNAL_EDITOR_INTEGRATION_PLAN.md  HANDOFF.md  KV260_READ_ONLY_STATUS_SURFACE.md  MODULE_ORGANIZATION_WORKFLOW.md  OPEN_SOURCE_COMPONENTS.md  PROJECT_DIRECTION_AND_STYLE.md  ROADMAP.md  SYSTEMVERILOG_WORKFLOW_BOUNDARY.md  TEST_TAXONOMY.md  WORKSPACE_ORIENTATION.md  v002.1-readiness-panel-guide.md
editors/vscode-prototype/: README.md  package-lock.json  package.json
fixtures/: empty.sv  missing_endmodule.sv  ok_module.sv
fixtures/modules/: block_comment_module.sv  commented_module.sv  commented_package_interface.sv  dup_simple_mod.sv  indented_module.sv  (+9 more)
schema/: diagnostics-v0.json  sv-ide-settings-v0.json
scripts/: check-editor-bridge-examples.sh  check-source-headers.py  editor-bridge-smoke.sh  source-header-legacy-baseline.json  vscode-adapter-smoke.sh  vscode-extension-host-smoke.sh
tests/: test_diagnostics.py  test_editor_bridge_contract.py  test_editor_bridge_examples.py  test_kv260_status.py  test_locate.py  test_module_index.py  test_module_organization.py  test_pccx_lab_backend.py  test_problem_export.py  test_repository_hygiene.py  test_xsim_log.py
(+126 files in other folders)
